--- a/SpriteGrabber/CaptureForm.it-IT.resx
+++ b/SpriteGrabber/CaptureForm.it-IT.resx
@@ -117,34 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
+  <data name="sfdDialog.Filter" xml:space="preserve">
+    <value>Immagine PNG *.png|*.png</value>
   </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>500, 300</value>
+  <data name="lblSprite.Text" xml:space="preserve">
+    <value>File sprite:</value>
   </data>
-  <data name="$this.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>500, 300</value>
+  <data name="btnSave.Text" xml:space="preserve">
+    <value>Salva</value>
   </data>
-  <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>500, 300</value>
+  <data name="btnClose.Text" xml:space="preserve">
+    <value>Chiudi</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
-    <value>CenterScreen</value>
+  <data name="lblOffset.Text" xml:space="preserve">
+    <value>Offset:</value>
+  </data>
+  <data name="lblSpriteSize.Text" xml:space="preserve">
+    <value>Dim. sprite:</value>
+  </data>
+  <data name="cbSwapFrames.Text" xml:space="preserve">
+    <value>Scambia frames</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>SpriteGrabber</value>
-    <comment>@Invariant</comment>
+    <value>Seleziona sprite</value>
   </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>SplashForm</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="btnCollect.Text" xml:space="preserve">
+    <value>Colleziona</value>
   </data>
 </root>
