--- a/SpriteGrabber/MainForm.resx
+++ b/SpriteGrabber/MainForm.resx
@@ -138,7 +138,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pbFrame1.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>20</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="pbFrame2.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
@@ -163,7 +163,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pbFrame2.ZOrder" xml:space="preserve">
-    <value>18</value>
+    <value>19</value>
   </data>
   <metadata name="ofdDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -196,7 +196,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;txtBundleFile.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>18</value>
   </data>
   <data name="lblBundleFile.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left</value>
@@ -208,10 +208,13 @@
     <value>12, 7</value>
   </data>
   <data name="lblBundleFile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>56, 13</value>
+    <value>77, 13</value>
   </data>
   <data name="lblBundleFile.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
+  </data>
+  <data name="lblBundleFile.Text" xml:space="preserve">
+    <value>Gfx source file:</value>
   </data>
   <data name="&gt;&gt;lblBundleFile.Name" xml:space="preserve">
     <value>lblBundleFile</value>
@@ -223,7 +226,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblBundleFile.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>17</value>
   </data>
   <data name="btnSelectFile.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left, Right</value>
@@ -239,7 +242,6 @@
   </data>
   <data name="btnSelectFile.Text" xml:space="preserve">
     <value>...</value>
-    <comment>@Invariant</comment>
   </data>
   <data name="&gt;&gt;btnSelectFile.Name" xml:space="preserve">
     <value>btnSelectFile</value>
@@ -251,7 +253,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnSelectFile.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>16</value>
   </data>
   <data name="nudFrame1.Location" type="System.Drawing.Point, System.Drawing">
     <value>295, 337</value>
@@ -272,7 +274,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;nudFrame1.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>15</value>
   </data>
   <data name="lblFrame1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -299,7 +301,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblFrame1.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>14</value>
   </data>
   <data name="lblFrame2.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -329,7 +331,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblFrame2.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>12</value>
   </data>
   <data name="nudFrame2.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -356,7 +358,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;nudFrame2.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>13</value>
   </data>
   <data name="lvMessages.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left, Right</value>
@@ -370,21 +372,6 @@
   <metadata name="cmsMessages.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
-  <data name="miSave.Size" type="System.Drawing.Size, System.Drawing">
-    <value>101, 22</value>
-  </data>
-  <data name="miSave.Text" xml:space="preserve">
-    <value>Save</value>
-  </data>
-  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 6</value>
-  </data>
-  <data name="miClear.Size" type="System.Drawing.Size, System.Drawing">
-    <value>101, 22</value>
-  </data>
-  <data name="miClear.Text" xml:space="preserve">
-    <value>Clear</value>
-  </data>
   <data name="cmsMessages.Size" type="System.Drawing.Size, System.Drawing">
     <value>102, 54</value>
   </data>
@@ -413,7 +400,22 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lvMessages.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>11</value>
+  </data>
+  <data name="miSave.Size" type="System.Drawing.Size, System.Drawing">
+    <value>101, 22</value>
+  </data>
+  <data name="miSave.Text" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>98, 6</value>
+  </data>
+  <data name="miClear.Size" type="System.Drawing.Size, System.Drawing">
+    <value>101, 22</value>
+  </data>
+  <data name="miClear.Text" xml:space="preserve">
+    <value>Clear</value>
   </data>
   <data name="lblMessages.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -440,7 +442,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblMessages.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <data name="btnCapture.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -467,7 +469,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCapture.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="txtBGColor.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -491,7 +493,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;txtBGColor.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="lblBGColor.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -521,7 +523,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblBGColor.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="txtMaxFrames.Location" type="System.Drawing.Point, System.Drawing">
     <value>56, 337</value>
@@ -542,7 +544,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;txtMaxFrames.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="lblMaxFrames.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -569,7 +571,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblMaxFrames.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="btnExchangeFrames.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -585,7 +587,6 @@
   </data>
   <data name="btnExchangeFrames.Text" xml:space="preserve">
     <value>&lt;-&gt;</value>
-    <comment>@Invariant</comment>
   </data>
   <data name="&gt;&gt;btnExchangeFrames.Name" xml:space="preserve">
     <value>btnExchangeFrames</value>
@@ -597,10 +598,10 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnExchangeFrames.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="btnSprites.Location" type="System.Drawing.Point, System.Drawing">
-    <value>718, 363</value>
+    <value>718, 367</value>
   </data>
   <data name="btnSprites.Size" type="System.Drawing.Size, System.Drawing">
     <value>69, 23</value>
@@ -621,13 +622,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnSprites.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <metadata name="tmrSplash.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>248, 17</value>
   </metadata>
   <data name="txtSprites.Location" type="System.Drawing.Point, System.Drawing">
-    <value>792, 365</value>
+    <value>792, 369</value>
   </data>
   <data name="txtSprites.Size" type="System.Drawing.Size, System.Drawing">
     <value>24, 20</value>
@@ -645,6 +646,30 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;txtSprites.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="btnOptions.Location" type="System.Drawing.Point, System.Drawing">
+    <value>11, 367</value>
+  </data>
+  <data name="btnOptions.Size" type="System.Drawing.Size, System.Drawing">
+    <value>75, 23</value>
+  </data>
+  <data name="btnOptions.TabIndex" type="System.Int32, mscorlib">
+    <value>25</value>
+  </data>
+  <data name="btnOptions.Text" xml:space="preserve">
+    <value>Options</value>
+  </data>
+  <data name="&gt;&gt;btnOptions.Name" xml:space="preserve">
+    <value>btnOptions</value>
+  </data>
+  <data name="&gt;&gt;btnOptions.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnOptions.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;btnOptions.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -661,7 +686,6 @@
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Sprite Grabber</value>
-    <comment>@Invariant</comment>
   </data>
   <data name="&gt;&gt;ofdDialog.Name" xml:space="preserve">
     <value>ofdDialog</value>
@@ -710,8 +734,5 @@
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="lblBundleFile.Text" xml:space="preserve">
-    <value>Gfx source file:</value>
   </data>
 </root>
